plans background on mobile fix

--- a/resources/assets/sass/components/sections/xcloud/feature.scss
+++ b/resources/assets/sass/components/sections/xcloud/feature.scss
@@ -173,7 +173,7 @@
 .section--xcloud-plans {
 
 	background-color: black;
-	height: 1109px;
+	height: 1409px;
 	overflow: hidden;
 	padding: 29px;
 
